# vigilant-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: CONFIGURATION.md  DETECTORS.md  DEVELOPMENT.md
mock_server/: __init__.py  app.py
sample_specs/: dummyjson.yaml  dummyjson_tokens.json  fintech.yaml  oauth_config.json  tokens.json
scripts/: __init__.py  refresh_dummyjson_tokens.py
src/: __init__.py  auth.py  bola_detector.py  logger.py  oauth_detector.py  reporter.py  request_utils.py  scanner.py  spec_parser.py  ssrf_detector.py
tests/: __init__.py  test_auth.py  test_bola_detector.py  test_cli.py  test_integration.py  test_logger.py  test_oauth_detector.py  test_request_utils.py  test_scanner.py  test_spec_parser.py  test_ssrf_detector.py
