[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilant-api"
version = "1.0.0"
description = "Black-box API security scanner — BOLA/IDOR, SSRF, OAuth flaw detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "colorama>=0.4",
    "flask>=3.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "pyjwt>=2.6",
]

[project.scripts]
vigilant-api = "cli:main"

[tool.setuptools]
# cli.py lives at the project root; src/ is added to sys.path inside cli.py.
# Mark the root as a package search path so 'cli' is importable after install.
py-modules = ["cli"]
packages   = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # PyJWT warns when a test key is shorter than 32 bytes — expected in unit tests
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]
