[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vigilant-api"
version = "1.0.0"
description = "Black-box API security scanner — BOLA/IDOR, SSRF, OAuth flaw detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1,<9",
    "colorama>=0.4.6,<1",
    "flask>=3.0,<4",
    "jinja2>=3.1,<4",
    "pyyaml>=6.0,<7",
    "requests>=2.31,<3",
    "pyjwt>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15,<2",
    "pytest>=9,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.12,<1",
    "types-PyYAML>=6,<7",
    "types-requests>=2.31,<3",
]

[project.scripts]
vigilant-api = "cli:main"

[tool.setuptools]
# cli.py lives at the project root; src/ is added to sys.path inside cli.py.
# Mark the root as a package search path so 'cli' is importable after install.
py-modules = ["cli"]
packages   = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--basetemp=.pytest-tmp",
    "-p",
    "no:cacheprovider",
]
filterwarnings = [
    # PyJWT warns when a test key is shorter than 32 bytes — expected in unit tests
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = false
warn_unused_configs = true
